--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>UPES CSI</title>
     <style>
         body {
-            background-color:#090040;
+            background-color:#ECDFCC;
         }
         header{
             text-align: center;
-            background-color:rgb(150, 20, 220);
+            background-color:#1E3E62;
             color:white;
             font-size: 40PX;
         }
@@ -43,6 +43,19 @@
     .shn{
         background-color:brown;
     }
+    .register-btn {
+            display: inline-block;
+            padding: 1rem 2rem;
+            background-color: #4caf50;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: bold;
+            
+        }
+        .register-btn:hover {
+            background-color: #011402;
+        }
     </style>
 </head>
 <body>
@@ -64,7 +77,7 @@
         <p>Join us for an exciting Tech Fest featuring hackathons, workshops, and seminars sessions by  experts.</p>
         
         <p><strong>Date:</strong> 5th July 2025 | <strong>Venue:</strong> UPES Campus</p>
-        <a href="#registration">Register Now</a>
+        <a href="#registration" class="register-btn">Register Now</a>
 </section>
 <section id="details">
     <h2>Event Details</h2>
